styles/style.css
/* Здесь вы напишете основную часть стилей страницы.

Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
✦ like-icon — для svg-иконки анимированного сердца
✦ card__like-button — для кнопки Like рядом с иконкой
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
✦ button__text — для обозначения текстового элемента внутри кнопки

*/

.page {
  min-inline-size: 320px;
  min-block-size: 100dvb;
  background-image: var(--background-gradient);
  background-size: cover;
  font-family: var(--main-font), sans-serif;
  font-size: 1.125rem;
  line-height: 1.3125rem;
  font-variation-settings: 'wght' var(--weight-main-font);
  background-attachment: fixed;
}

.surface {
  border: 2px solid var(--border-color);
  background-color: var(--bg-color);
}

.container {
  margin-inline: auto;
  inline-size: var(--section-size);
}

.accent-font {
  font-family: var(--accent-font), serif;
  line-height: 1;
}

.button {
  position: relative;
  overflow: hidden;
  border: none;
  background-color: transparent;
  color: var(--accent-color);
  transition: box-shadow 0.3s ease;
}

.button:not(.card__icon-button)::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: 1;
  background-color: var(--accent-color);
  transition: transform 0.5s ease-in-out;
  transform: translateX(-100%);
}

.button__text {
  position: relative;
  z-index: 2;
  display: block;
  color: var(--button-text-color);
  font-size: 14px;
  line-height: 90%;
  mix-blend-mode: difference;
}

.button:focus {
  outline: none;
}

.button:focus-visible {
  box-shadow: 2px 2px 0 var(--accent-color);
}

.button:hover::before {
  transform: translateX(0);
}

.card__icon-button {
  margin-block: auto;
  padding: 0;
  block-size: 35px;
  transition: outline 0.3s ease;
  margin-inline-end: 7px;
}

.card__icon-button:focus-visible {
  box-shadow: none;
  outline: 2px solid var(--accent-color);
}

.header {
  display: grid;
  gap: 20px;
  grid-template-columns: 1fr;
  grid-template-rows: min-content min-content;
  margin-block: 100px 94px;
  padding-block: clamp(122px, calc(122px + (100vw - 370px) * 8 / 1070), 130px);
  text-transform: uppercase;
  place-items: end center;
}

.header__link {
  text-decoration: none;
}

.header__logo {
  display: block;
  font-size: clamp(49px, calc(49px + (100vw - 375px) * 16 / 1065), 65px);
}

.header__title {
  font-size: clamp(14px, calc(14px + (100vw - 375px) * 9 / 1065), 23px);
  place-self: start center;
}

.container__list {
  list-style-type: none;
  display: grid;
  gap: 50px;
  grid-template-columns: 1fr;
}

.card {
  display: grid;
  place-items: start center;
}

.card__title {
  --weight-main-font: 715;

  padding-block:4px;
  padding-inline: 10px;
  line-height: 1.3;
  font-variation-settings: 'wght' var(--weight-main-font);
  place-self: stretch;
  border-block-end: 2px solid var(--border-color);
}

.card__media {
  position: relative;
  z-index: 1;
  inline-size: 100%;
  block-size: 100%;
  max-inline-size: 696px;
  max-block-size: 696px;
  overflow: hidden;
}

.card__media-img {
  display: block;
  inline-size: 100%;
  block-size: 100%;
}

.card__media-label {
  position: absolute;
  z-index: 2;
  font-size: 14px;
  text-transform: uppercase;
  inset-block-start: 25px;
  inset-inline-end: 25px;
  mix-blend-mode: hard-light;
  opacity: 0.5;
  text-shadow:
    1px 0 0 var(--stroke-color),
    -1px 0 0 var(--stroke-color),
    0 1px 0 var(--stroke-color),
    0 -1px 0 var(--stroke-color),
    1px 1px 0 var(--stroke-color),
    -1px -1px 0 var(--stroke-color),
    1px -1px 0 var(--stroke-color),
    -1px 1px 0 var(--stroke-color);
}

@supports not (-webkit-text-stroke: 1px (var(--stroke-color))) {
  .card__media-label {
    text-shadow: none;
    -webkit-text-stroke: 1px (var(--stroke-color));
  }
}

.card__body {
  padding: 24px 25px 25px;
  border-block-start: 2px solid var(--border-color);
}

.card__text {
  padding-block-end: 25px;
}

.card__control {
  place-self: end;
  display: flex;
  align-items: flex-end;
}

.card__like-button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-block: 0.6562rem;
  inline-size: 130px;
  border: 2px solid var(--border-color);
}

.card__media-img_grayscale {
  filter: grayscale(80%);
}

.card__media-img_hue-rotate-saturate {
  filter: hue-rotate(10deg) saturate(260%) contrast(140%);
}

.card__media-img_hue-rotate {
  filter: hue-rotate(30deg);
}

.card__media-img_invert {
  filter: invert(100%) brightness(80%);
}

.card__media-img_sepia {
  filter: sepia(100%);
}

.card__media-img_blur {
  filter: blur(20px);
}

.card__media-img_hue-rotate-blur-contrast {
  filter: hue-rotate(90deg) blur(2px) contrast(50%);
}

.button-save {
  display: flex;
  align-items: center;
  margin-block: 50px 100px;
  margin-inline: auto;
  padding-block: 0.98rem;
  padding-inline: 1.15rem;
  border: 2px solid var(--border-color);
  background-color: var(--bg-color);
}

.save-icon {
  z-index: 2;
  inline-size: 21px;
  block-size: 21px;
  color: var(--button-text-color);
  fill: currentColor;
  margin-inline-end: 8px;
  mix-blend-mode: difference;
}

.dialog {
  position: fixed;
  z-index: 3;
  row-gap: 30px;
  margin: 0;
  inline-size: clamp(341px, 23vw, 353px);
  text-transform: uppercase;
  transform: translate(-50%, -50%);
  inset-block-start: 50%;
  inset-inline-start: 50%;
}

.dialog[open] {
  display: grid;
  grid-template-columns: 60px 1fr;
  grid-template-rows: 1fr min-content;
  padding: 30px;
  place-items: center;
}

.dialog::backdrop {
  background-color: var(--backdrop-color);
  opacity: 0.75;
}

.dialog__image {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  inline-size: 39px;
  block-size: 39px;
  place-self: center start;
}

.dialog__text {
  grid-column: 2 / 5;
  grid-row: 1 / 2;
  font-size: 14px;
  line-height: 150%;
}

.dialog__button {
  grid-column: 1 / 5;
  grid-row: 2 / 3;
  padding-block: 12px;
  inline-size: 100%;
  border: 2px solid var(--border-color);
  font-size: 14px;
  line-height: 90%;
  text-transform: inherit;
  place-self: start;
}

@media (width <=375px) {
  .dialog {
    transform: translate(-50%, -60%);
  }

  .button-save {
    flex-direction: column;
  }

  .save-icon {
    inline-size: 28px;
    block-size: 28px;
    margin-block-end: 8px;
  }
}

